                    adjust classificatoin of ternary complexes extending enumeration for _rcsb_entry_info.selected_polymer_entity_types
                    add new classifier _rcsb_entry_info.na_polymer_entity_types
                    and removed _rcsb_entry_info.nonpolymer_ligand_entity_count
 20-May-2019  V0.63 Category rcsb_prot_sec_struct_info added to core_entity_instance and prune primary secondary structure
                    categories from this collection.
 21-May-2019  V0.64 Handle odd ordering of records in struct_ref_seq_dif
 29-Jun-2019  V0.65 Update development workflow, method code packaging,  and general housekeeping
  8-Aug-2019  V0.66 Refactoring dictionary method helpers and external resource provisioning to
                    reduce redundant processing and facilitate greater caching. Remove testing
                    dependencies on mock schemas and add explicit schema differencing to better
                    schema evolution. Add new helper methods for sites and connections and revise helper
                    methods for all entity and instance features.
 10-Sep-2019  V0.67 Adding extended metadata types, AtcProvider() and SiftsSummaryProvider().
 19-Sep-2019  V0.68 Eliminate private keys, revise/extend interenal schema metadata, purge schema,
                    add polymer alignment methods.
 24-Sep-2019  V0.69 Add additional polymer_instance features and new polymer_instance_validations methods.
 25-Sep-2019  V0.70 Incorporate RCSB extensions in 'min' schemas add single collection specific identifiers core collections
                    Add missing required entry identifiers.
 25-Sep-2019  V0.71 Adjustments for edge cases and enums after full-load tests
 29-Sep-2019  V0.72 Further adjustments for edge cases and enums after full-load tests
 29-Sep-2019  V0.73 Parallelize merging content types in RepositoryProvider()
 29-Sep-2019  V0.74 Cleaning up more edge cases with missing or misorganized data