@@ -17,7 +17,7 @@ scandir; python_version < "3.0"
 configparser; python_version < "3.0"
 rcsb.utils.ec >= 0.16
 rcsb.utils.taxonomy >= 0.25
-rcsb.utils.seq >= 0.19
+rcsb.utils.seq >= 0.22
 rcsb.utils.struct >= 0.20
 #
 SQLAlchemy; sys_platform == 'linux'
